; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_about.c_ShowAboutBox.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_about.c_ShowAboutBox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hInst = common dso_local global i32 0, align 4
@IDS_APP_TITLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i32] zeroinitializer, align 4
@IDI_REGEDIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ShowAboutBox(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [255 x i32], align 16
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @hInst, align 4
  %5 = load i32, i32* @IDS_APP_TITLE, align 4
  %6 = getelementptr inbounds [255 x i32], [255 x i32]* %3, i64 0, i64 0
  %7 = getelementptr inbounds [255 x i32], [255 x i32]* %3, i64 0, i64 0
  %8 = call i32 @COUNT_OF(i32* %7)
  %9 = call i32 @LoadStringW(i32 %4, i32 %5, i32* %6, i32 %8)
  %10 = load i32, i32* %2, align 4
  %11 = getelementptr inbounds [255 x i32], [255 x i32]* %3, i64 0, i64 0
  %12 = load i32, i32* @hInst, align 4
  %13 = load i32, i32* @IDI_REGEDIT, align 4
  %14 = call i32 @MAKEINTRESOURCEW(i32 %13)
  %15 = call i32 @LoadIconW(i32 %12, i32 %14)
  %16 = call i32 @ShellAboutW(i32 %10, i32* %11, i8* bitcast ([1 x i32]* @.str to i8*), i32 %15)
  ret void
}

declare dso_local i32 @LoadStringW(i32, i32, i32*, i32) #1

declare dso_local i32 @COUNT_OF(i32*) #1

declare dso_local i32 @ShellAboutW(i32, i32*, i8*, i32) #1

declare dso_local i32 @LoadIconW(i32, i32) #1

declare dso_local i32 @MAKEINTRESOURCEW(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
